Replace old assets with bower component.

--- a/examples/flot.html
+++ b/examples/flot.html
@@ -10,7 +10,7 @@
 
     <!-- Core CSS - Include with every page -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <link href="../font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="../vendor/font-awesome/css/font-awesome.css" rel="stylesheet">
 
     <!-- Page-Level Plugin CSS - Flot -->
 
@@ -468,16 +468,17 @@
     <!-- /#wrapper -->
 
     <!-- Core Scripts - Include with every page -->
-    <script src="../js/jquery-1.10.2.js"></script>
+    <script src="../vendor/jquery/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
-    <script src="../js/plugins/metisMenu/jquery.metisMenu.js"></script>
+    <script src="../vendor/metisMenu/jquery.metisMenu.js"></script>
 
     <!-- Page-Level Plugin Scripts - Flot -->
     <!--[if lte IE 8]><script src="js/excanvas.min.js"></script><![endif]-->
-    <script src="../js/plugins/flot/jquery.flot.js"></script>
-    <script src="../js/plugins/flot/jquery.flot.tooltip.min.js"></script>
-    <script src="../js/plugins/flot/jquery.flot.resize.js"></script>
-    <script src="../js/plugins/flot/jquery.flot.pie.js"></script>
+    <script src="../vendor/jquery-flot/jquery.flot.js"></script>
+    <script src="../vendor/jquery-flot/jquery.flot.time.js"></script>
+    <script src="../vendor/flot.tooltip/js/jquery.flot.tooltip.min.js"></script>
+    <script src="../vendor/jquery-flot/jquery.flot.resize.js"></script>
+    <script src="../vendor/jquery-flot/jquery.flot.pie.js"></script>
 
     <!-- SB Admin Scripts - Include with every page -->
     <script src="../js/sb-admin.js"></script>
