--- a/examples/morris.html
+++ b/examples/morris.html
@@ -10,10 +10,10 @@
 
     <!-- Core CSS - Include with every page -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <link href="../font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="../vendor/font-awesome/css/font-awesome.css" rel="stylesheet">
 
     <!-- Page-Level Plugin CSS - Morris -->
-    <link href="../css/plugins/morris/morris-0.4.3.min.css" rel="stylesheet">
+    <link href="../vendor/morris.js/morris.css" rel="stylesheet">
 
     <!-- SB Admin CSS - Include with every page -->
     <link href="../css/sb-admin.css" rel="stylesheet">
@@ -445,13 +445,13 @@
     <!-- /#wrapper -->
 
     <!-- Core Scripts - Include with every page -->
-    <script src="../js/jquery-1.10.2.js"></script>
+    <script src="../vendor/jquery/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
-    <script src="../js/plugins/metisMenu/jquery.metisMenu.js"></script>
+    <script src="../vendor/metisMenu/jquery.metisMenu.js"></script>
 
     <!-- Page-Level Plugin Scripts - Morris -->
-    <script src="../js/plugins/morris/raphael-2.1.0.min.js"></script>
-    <script src="../js/plugins/morris/morris.js"></script>
+    <script src="../vendor/raphael/raphael-min.js"></script>
+    <script src="../vendor/morris.js/morris.js"></script>
 
     <!-- SB Admin Scripts - Include with every page -->
     <script src="../js/sb-admin.js"></script>
