--- a/examples/tables.html
+++ b/examples/tables.html
@@ -10,10 +10,10 @@
 
     <!-- Core CSS - Include with every page -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <link href="../font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="../vendor/font-awesome/css/font-awesome.css" rel="stylesheet">
 
     <!-- Page-Level Plugin CSS - Tables -->
-    <link href="../css/plugins/dataTables/dataTables.bootstrap.css" rel="stylesheet">
+    <link href="../vendor/datatables-bootstrap3/BS3/assets/css/datatables.css" rel="stylesheet">
 
     <!-- SB Admin CSS - Include with every page -->
     <link href="../css/sb-admin.css" rel="stylesheet">
@@ -1099,13 +1099,13 @@
     <!-- /#wrapper -->
 
     <!-- Core Scripts - Include with every page -->
-    <script src="../js/jquery-1.10.2.js"></script>
+    <script src="../vendor/jquery/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
-    <script src="../js/plugins/metisMenu/jquery.metisMenu.js"></script>
+    <script src="../vendor/metisMenu/jquery.metisMenu.js"></script>
 
     <!-- Page-Level Plugin Scripts - Tables -->
-    <script src="../js/plugins/dataTables/jquery.dataTables.js"></script>
-    <script src="../js/plugins/dataTables/dataTables.bootstrap.js"></script>
+    <script src="../vendor/datatables/media/js/jquery.dataTables.js"></script>
+    <script src="../vendor/datatables-bootstrap3/BS3/assets/js/datatables.js"></script>
 
     <!-- SB Admin Scripts - Include with every page -->
     <script src="../js/sb-admin.js"></script>
