--- a/examples/login.html
+++ b/examples/login.html
@@ -10,7 +10,7 @@
 
     <!-- Core CSS - Include with every page -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <link href="../font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="../vendor/font-awesome/css/font-awesome.css" rel="stylesheet">
 
     <!-- SB Admin CSS - Include with every page -->
     <link href="../css/sb-admin.css" rel="stylesheet">
@@ -51,9 +51,9 @@
     </div>
 
     <!-- Core Scripts - Include with every page -->
-    <script src="../js/jquery-1.10.2.js"></script>
+    <script src="../vendor/jquery/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
-    <script src="../js/plugins/metisMenu/jquery.metisMenu.js"></script>
+    <script src="../vendor/metisMenu/jquery.metisMenu.js"></script>
 
     <!-- SB Admin Scripts - Include with every page -->
     <script src="../js/sb-admin.js"></script>
