--- a/examples/index.html
+++ b/examples/index.html
@@ -44,7 +44,7 @@
     <script src="../vendor/metisMenu/jquery.metisMenu.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.11/angular.js"></script>
-    <script src="../js/directives.js"></script>
+    <script src="../js/sb-admin-module.js"></script>
     <script src="../js/app.js"></script>
 
 </body>
