Add angular-route module.

--- a/examples/index.html
+++ b/examples/index.html
@@ -43,7 +43,8 @@
     <script src="../vendor/jquery/jquery.min.js"></script>
     <script src="../vendor/metisMenu/jquery.metisMenu.js"></script>
     <script src="../js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.11/angular.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.11/angular.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.11/angular-route.js"></script>
     <script src="../js/sb-admin-module.js"></script>
     <script src="../js/app.js"></script>
 
