Move affix tag in sidebar.html to index.html.

--- a/examples/index.html
+++ b/examples/index.html
@@ -29,7 +29,9 @@
 
         <!-- /.navbar-fixed-top -->
 
+        <div data-spy="affix" data-offset-top="0" data-offset-bottom="200">
         <sb-sidebar></sb-sidebar>
+        </div>
 
         <div id="page-wrapper" ng-view>
 
