Add datatable assets references.

--- a/examples/index.html
+++ b/examples/index.html
@@ -15,6 +15,7 @@
     <!-- Page-Level Plugin CSS - Dashboard -->
     <link rel="stylesheet" href="../vendor/morris.js/morris.css">
     <link rel="stylesheet" href="../css/plugins/timeline/timeline.css">
+    <link rel="stylesheet" href="../vendor/datatables-bootstrap3/BS3/assets/css/datatables.css">
 
     <!-- SB Admin CSS - Include with every page -->
     <link rel="stylesheet" href="../css/sb-admin.css">
@@ -40,6 +41,8 @@
     <!-- Core Scripts - Include with every page -->
     <script src="../vendor/jquery/jquery.min.js"></script>
     <script src="../vendor/metisMenu/jquery.metisMenu.js"></script>
+    <script src="../vendor/datatables/media/js/jquery.dataTables.js"></script>
+    <script src="../vendor/datatables-bootstrap3/BS3/assets/js/datatables.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.11/angular.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.11/angular-route.js"></script>
