--- a/examples/index.html
+++ b/examples/index.html
@@ -47,7 +47,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.11/angular.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.11/angular-route.js"></script>
     <script src="../js/sb-admin-module.js"></script>
-    <script src="../js/app.js"></script>
+    <script src="../js/example-app.js"></script>
 
 </body>
 
