Add morris.js example.

--- a/examples/index.html
+++ b/examples/index.html
@@ -43,6 +43,8 @@
     <script src="../vendor/metisMenu/jquery.metisMenu.js"></script>
     <script src="../vendor/datatables/media/js/jquery.dataTables.js"></script>
     <script src="../vendor/datatables-bootstrap3/BS3/assets/js/datatables.js"></script>
+    <script src="../vendor/raphael/raphael-min.js"></script>
+    <script src="../vendor/morris.js/morris.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.11/angular.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.11/angular-route.js"></script>
