Add comments of script tags.

--- a/examples/index.html
+++ b/examples/index.html
@@ -41,14 +41,24 @@
     <!-- Core Scripts - Include with every page -->
     <script src="../vendor/jquery/jquery.min.js"></script>
     <script src="../vendor/metisMenu/jquery.metisMenu.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+
+    <!-- Plugin Scripts - DataTables -->
     <script src="../vendor/datatables/media/js/jquery.dataTables.js"></script>
     <script src="../vendor/datatables-bootstrap3/BS3/assets/js/datatables.js"></script>
+
+    <!-- Plugin Scripts - Morris.js -->
     <script src="../vendor/raphael/raphael-min.js"></script>
     <script src="../vendor/morris.js/morris.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
+
+    <!-- Plugin Scripts - AngularJS -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.11/angular.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.11/angular-route.js"></script>
+
+    <!-- Plugin Scripts - SbAdmin -->
     <script src="../js/sb-admin-module.js"></script>
+
+    <!-- Example Scripts -->
     <script src="../js/example-app.js"></script>
 
 </body>
