Add flot examples, part 1.

--- a/examples/index.html
+++ b/examples/index.html
@@ -51,12 +51,21 @@
     <script src="../vendor/raphael/raphael-min.js"></script>
     <script src="../vendor/morris.js/morris.js"></script>
 
+    <!-- Plugin Scripts - Flot -->
+    <!--[if lte IE 8]><script src="../vendor/jquery-flot/excanvas.min.js"></script><![endif]-->
+    <script src="../vendor/jquery-flot/jquery.flot.js"></script>
+    <script src="../vendor/jquery-flot/jquery.flot.time.js"></script>
+    <script src="../vendor/flot.tooltip/js/jquery.flot.tooltip.min.js"></script>
+    <script src="../vendor/jquery-flot/jquery.flot.resize.js"></script>
+    <script src="../vendor/jquery-flot/jquery.flot.pie.js"></script>
+
     <!-- Plugin Scripts - AngularJS -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.11/angular.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.11/angular-route.js"></script>
 
     <!-- Plugin Scripts - SbAdmin -->
     <script src="../js/sb-admin-module.js"></script>
+    <script src="../js/sb-flot-module.js"></script>
 
     <!-- Example Scripts -->
     <script src="../js/example-app.js"></script>
