--- a/examples/index.html
+++ b/examples/index.html
@@ -32,8 +32,17 @@
         <sb-sidebar></sb-sidebar>
         </div>
 
-        <div id="page-wrapper" ng-view>
-
+        <div id="page-wrapper">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header">{{ pageHeader }}</h1>
+                </div>
+                <!-- /.col-lg-12 -->
+            </div>
+            <!-- /.row -->
+            
+            <ng-view></ng-view>
+            
         </div>
 
     </div>
